projects/aequitas/customer/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customer
  name: customer-svc
  namespace: aequitas-dev
spec:
  ports:
    - port: 7010
      protocol: TCP
      targetPort: 7010
  selector:
    app: customer
