projects/aequitas/customer/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer
  namespace: aequitas-dev
  labels:
    app: customer
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: public
  tls:
    - hosts:
        - aequitas-customer-dev.coherent.in
      secretName: customer-tls
  rules:
    - host: "aequitas-customer-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-svc
                port:
                  number: 7010
